crates/ohno_macros_impl/tests/snapshots/derive_error_display__tests__nothing_is_referenceable_when_every_field_is_generated.snap
---
source: crates/ohno_macros/src/derive_error/display/mod.rs
expression: "lowered(parse_quote!\n{\n    #[display(\"bad path: {path}\")] struct\n    T(#[doc = \" ohno::generated-core@7f3d9c2a\"] ohno::OhnoCore);\n})"
---
fn message() {
    let _ = "bad path: {}";
}
::core::compile_error! {
    "unknown field `path` in `#[display(...)]`, the error type has no fields that can be referenced"
}
