crates/ohno_macros_impl/tests/snapshots/derive_error_display__tests__the_added_core_is_not_referenceable.snap
---
source: crates/ohno_macros/src/derive_error/display/mod.rs
expression: "lowered(parse_quote!\n{\n    #[display(\"bad path: {1}\")] struct\n    T(String, #[doc = \" ohno::generated-core@7f3d9c2a\"] ohno::OhnoCore);\n})"
---
fn message() {
    let _ = "bad path: {}";
}
::core::compile_error! {
    "unknown field `1` in `#[display(...)]`, available fields: `0`"
}
